# minecraft_bedrock_hibernation

./: .gitignore  Cargo.toml  README.md  mbh_config.json  server.properties
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
ptero-egg/: mbh-pterodactyl-egg.json
src/: main.rs  protocol_version.rs
src/bds/: bds_manager.rs  bds_status.rs  console_io.rs  mod.rs  proxy_connector.rs
src/bedrock_server/: bedrock_server_child.rs  bedrock_server_io.rs  bedrock_server_status.rs  mod.rs  motd.rs
src/config/: config.rs
src/config_manager/: advertisement.rs  config.rs  mod.rs
src/proxy/: mod.rs  proxy.rs  proxy_connector.rs
