[package]
name = "minecraft_bedrock_hibernation"
version = "0.6.0"
edition = "2024"

[dependencies]
rust-raknet = { git = "https://github.com/Cennac2/rust-raknet" }
tokio = { version = "1", default-features = false, features = ["sync"]  }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
java-properties = "1"
crossterm = "0.27"
